--- a/Dorm -/eLibraryManagement/DORM.csproj
+++ b/Dorm -/eLibraryManagement/DORM.csproj
@@ -2151,6 +2151,7 @@
     <Content Include="images\amazing-aerial-shot-singapore-cityscape-with-lots-skyscrapers.jpg" />
     <Content Include="images\banner.png" />
     <Content Include="images\Capture.PNG" />
+    <Content Include="images\Home icon.png" />
     <Content Include="images\home_1946436.png" />
     <Content Include="images\user Icon.png" />
     <Content Include="signup.aspx" />
