--- a/Dorm -/eLibraryManagement/DORM.csproj
+++ b/Dorm -/eLibraryManagement/DORM.csproj
@@ -2160,6 +2160,7 @@
     <Content Include="images\home_1946436.png" />
     <Content Include="images\Publisher Management.jpg" />
     <Content Include="images\user Icon.png" />
+    <Content Include="adminMemberManagement.aspx" />
     <Content Include="signup.aspx" />
     <Content Include="userlogin.aspx" />
     <Content Include="userprofile.aspx" />
@@ -2201,6 +2202,13 @@
     </Compile>
     <Compile Include="home.aspx.designer.cs">
       <DependentUpon>home.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="adminMemberManagement.aspx.cs">
+      <DependentUpon>adminMemberManagement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="adminMemberManagement.aspx.designer.cs">
+      <DependentUpon>adminMemberManagement.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="signup.aspx.cs">
