--- a/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
+++ b/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+	<connectionStrings>
+	 <add name="con" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=true" />
+	</connectionStrings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
