--- a/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
+++ b/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
@@ -9,6 +9,8 @@
   <add name="con" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=true" />
   <add name="dormDBConnectionString" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
+  <add name="dormDBConnectionString3" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
   <system.web>
