--- a/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
+++ b/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
@@ -11,11 +11,16 @@
    providerName="System.Data.SqlClient" />
   <add name="dormDBConnectionString3" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
+  <add name="dormDBConnectionString2" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="dormDBConnectionString4" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime maxRequestLength="52428800" targetFramework="4.7.2" />
+	
   </system.web>
   <system.codedom>
     <compilers>
