--- a/Dorm -/eLibraryManagement/Web.config
+++ b/Dorm -/eLibraryManagement/Web.config
@@ -15,6 +15,8 @@
    providerName="System.Data.SqlClient" />
   <add name="dormDBConnectionString4" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
    providerName="System.Data.SqlClient" />
+  <add name="dormDBConnectionStringLandLoadGrid" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	
   <system.web>
