--- a/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
+++ b/Dorm -/eLibraryManagement/bin/eLibraryManagement.dll.config
@@ -1,28 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-
-	<connectionStrings>
-  <add name="con" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=true" />
-  <add name="dormDBConnectionString" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
-  <add name="dormDBConnectionString3" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
-  <add name="dormDBConnectionString2" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
-  <add name="dormDBConnectionString4" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
-  <add name="dormDBConnectionStringLandLoadGrid" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
- </connectionStrings>
-	
+  <connectionStrings>
+    <add name="con" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=true" />
+    <add name="dormDBConnectionString" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dormDBConnectionString3" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dormDBConnectionString2" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dormDBConnectionString4" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dormDBConnectionStringLandLoadGrid" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dormDBConnectionStringWardenTBL" connectionString="Data Source=DESKTOP-SNT6N8P\SQLEXPRESS;Initial Catalog=dormDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime maxRequestLength="52428800" targetFramework="4.7.2" />
-	
   </system.web>
   <system.codedom>
     <compilers>
@@ -30,4 +23,24 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Web.Infrastructure" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
