--- a/Dorm -/eLibraryManagement/DORM.csproj
+++ b/Dorm -/eLibraryManagement/DORM.csproj
@@ -2188,6 +2188,7 @@
     <Content Include="landloadPublisher.aspx" />
     <Content Include="map.aspx" />
     <Content Include="signup.aspx" />
+    <Content Include="TestPublish.aspx" />
     <Content Include="userlogin.aspx" />
     <Content Include="userprofile.aspx" />
     <Content Include="Web.config" />
@@ -2278,6 +2279,13 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="TestPublish.aspx.cs">
+      <DependentUpon>TestPublish.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TestPublish.aspx.designer.cs">
+      <DependentUpon>TestPublish.aspx</DependentUpon>
     </Compile>
     <Compile Include="userlogin.aspx.cs">
       <DependentUpon>userlogin.aspx</DependentUpon>
