--- a/Dorm -/eLibraryManagement/DORM.csproj
+++ b/Dorm -/eLibraryManagement/DORM.csproj
@@ -99,6 +99,7 @@
     <Content Include="css\customstylesheet.css" />
     <Content Include="datatables\css\dataTables.dataTables.min.css" />
     <Content Include="datatables\js\dataTables.min.js" />
+    <Content Include="Error.aspx" />
     <Content Include="fontawesome\css\all.css" />
     <Content Include="fontawesome\css\all.min.css" />
     <Content Include="fontawesome\css\brands.css" />
@@ -2186,9 +2187,8 @@
     <Content Include="images\user Icon.png" />
     <Content Include="adminMemberManagement.aspx" />
     <Content Include="landloadPublisher.aspx" />
-    <Content Include="map.aspx" />
     <Content Include="signup.aspx" />
-    <Content Include="TestPublish.aspx" />
+    <Content Include="AccommodationList.aspx" />
     <Content Include="userlogin.aspx" />
     <Content Include="userprofile.aspx" />
     <Content Include="Web.config" />
@@ -2237,6 +2237,13 @@
     <Compile Include="AdverticementPublish.aspx.designer.cs">
       <DependentUpon>AdverticementPublish.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+    </Compile>
     <Compile Include="home.aspx.cs">
       <DependentUpon>home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2258,13 +2265,6 @@
     <Compile Include="landloadPublisher.aspx.designer.cs">
       <DependentUpon>landloadPublisher.aspx</DependentUpon>
     </Compile>
-    <Compile Include="map.aspx.cs">
-      <DependentUpon>map.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="map.aspx.designer.cs">
-      <DependentUpon>map.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="signup.aspx.cs">
       <DependentUpon>signup.aspx</DependentUpon>
@@ -2280,12 +2280,12 @@
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
-    <Compile Include="TestPublish.aspx.cs">
-      <DependentUpon>TestPublish.aspx</DependentUpon>
+    <Compile Include="AccommodationList.aspx.cs">
+      <DependentUpon>AccommodationList.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="TestPublish.aspx.designer.cs">
-      <DependentUpon>TestPublish.aspx</DependentUpon>
+    <Compile Include="AccommodationList.aspx.designer.cs">
+      <DependentUpon>AccommodationList.aspx</DependentUpon>
     </Compile>
     <Compile Include="userlogin.aspx.cs">
       <DependentUpon>userlogin.aspx</DependentUpon>
